fix: prevent linebreaks of title on Safari

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1613,7 +1613,6 @@ select.bk-input:hover {
 }
 
 :host(.legend-checkbox) span {
-  position: absolute;
   width: 100%;
   --tw-translate-y: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
